--- a/sayhello/templates/index.html
+++ b/sayhello/templates/index.html
@@ -5,9 +5,9 @@
     <div class="hello-form">
         {{ render_form(form, action=request.full_path) }}
     </div>
-    <h5>{{ messages|length }} messages
+    <h5>{{ messages|length }} 条信息
         <small class="float-right">
-            <a href="#bottom" title="Go Bottom">&darr;</a>
+            <a href="#bottom" title="Go Bottom">达到底部 &darr;</a>
         </small>
     </h5>
     <div class="list-group">
