--- a/sayhello/templates/index.html
+++ b/sayhello/templates/index.html
@@ -7,7 +7,7 @@
     </div>
     <h5>{{ messages|length }} 条信息
         <small class="float-right">
-            <a href="#bottom" title="Go Bottom">达到底部 &darr;</a>
+            <a href="#bottom" title="Go Bottom">到达底部 &darr;</a>
         </small>
     </h5>
     <div class="list-group">
