又翻译了两处

--- a/sayhello/templates/base.html
+++ b/sayhello/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>{% block title %}Say Hello!{% endblock %}</title>
+    <title>{% block title %}我的记事本{% endblock %}</title>
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
@@ -13,7 +13,7 @@
     <header>
         <h1 class="text-center display-4">
             <a href="{{ url_for('index') }}" class="text-success"><strong>记事本</strong></a>
-            <small class="text-muted sub-title">Say Hello to the world</small>
+            <small class="text-muted sub-title">写点什么好呢</small>
         </h1>
     </header>
     {% for message in get_flashed_messages() %}
@@ -25,9 +25,10 @@
     {% block content %}{% endblock %}
     <footer class="text-center">
         {% block footer %}
-            <small> &copy; 2018 <a href="http://greyli.com" title="Written by Grey Li">Grey Li</a> /
+            <small> &copy; 2022 <a href="http://greyli.com" title="Written by Grey Li">Grey Li</a> /
                 <a href="https://github.com/greyli/sayhello" title="Fork me on GitHub">GitHub</a> /
-                <a href="http://helloflask.com" title="A HelloFlask project">HelloFlask</a>
+                <a href="http://helloflask.com" title="A HelloFlask project">HelloFlask</a>/
+                <a href="https://space.bilibili.com/254479550" title="Powersee">Powersee</a>
             </small>
             <p><a id="bottom" href="#" title="Go Top">返回顶部 &uarr;</a></p>
         {% endblock %}
