--- a/sayhello/static/css/style.css
+++ b/sayhello/static/css/style.css
@@ -2,7 +2,12 @@ body {
     background-color: rgb(245, 245, 245) !important;
 }
 
-p {
+pre{
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}
+
+p{
     overflow-wrap: break-word;
     word-wrap: break-word;
 }
