--- a/sayhello/templates/index.html
+++ b/sayhello/templates/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% from 'bootstrap/form.html' import render_form %}
+{% from 'form.html' import render_form %}
 
 {% block content %}
     <div class="hello-form">
@@ -18,8 +18,8 @@
                         <small class="text-muted"> #{{ loop.revindex }}</small>
                     </h5>
                     <small data-toggle="tooltip" data-placement="top"
-                        data-timestamp="{{ message.timestamp.strftime('%Y-%m-%dT%H:%M:%SZ') }}"
-                        data-delay="500">
+                           data-timestamp="{{ message.timestamp.strftime('%Y-%m-%dT%H:%M:%SZ') }}"
+                           data-delay="500">
                         {{ moment(message.timestamp).fromNow(refresh=True) }}
                     </small>
                 </div>
